# musicapp

./: README.md
client/: analysis_options.yaml  pubspec.yaml
client/android/: build.gradle
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/lib/: main.dart
client/lib/core/: utils.dart
client/lib/core/constants/: server_constants.dart
client/lib/core/failure/: failure.dart
client/lib/core/provider/: current_user_notifier.dart
client/lib/core/theme/: app_palette.dart  theme.dart
client/lib/core/widgets/: custom_page.dart
client/lib/features/auth/model/: user_model.dart
client/lib/features/auth/repositories/: auth_remote_repository.dart
client/lib/features/auth/view/pages/: signin_page.dart  signup_page.dart
client/lib/features/auth/view/widgets/: auth_button.dart  custom_page.dart
client/lib/features/auth/viewmodel/: auth_viewmodel.dart  auth_viewmodel.g.dart
client/lib/features/home/models/: song_model.dart
client/lib/features/home/repositories/: home_repository.dart
client/lib/features/home/view/pages/: home_page.dart  library_page.dart  songs_page.dart  upload_music_page.dart
client/lib/features/home/viewmodel/: home_viewmodel.dart  home_viewmodel.g.dart
server/: README.md  pyproject.toml
server/src/server/: database.py  main.py  settings.py
server/src/server/middleware/: auth_middleware.py
server/src/server/models/: song.py  user.py
server/src/server/pydantic_schema/: create_user.py  login_user.py
server/src/server/routes/: auth.py  song.py
(+1 files in other folders)
